feat: implementação do histórico de conferência e registro do responsável pela finalização
